--- a/mc-style.css
+++ b/mc-style.css
@@ -7,3 +7,16 @@
     background-color: #5272F2;
     padding: 20px;
 }
+
+.element1 {
+    background-color: #F8BDEB;
+    padding: 10px;
+    margin-bottom: 50px ;
+}
+
+.element2 {
+    background-color: #F8BDEB;
+    padding: 10px;
+    margin-top: 20px ;
+
+}
